// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Progress Basic render 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c0 {
  font-size: calc(1rem * 1);
  -webkit-animation: 0.8s linear 0s infinite alternate none running dhGBQd;
  animation: 0.8s linear 0s infinite alternate none running dhGBQd;
  height: 0.4em;
  width: 100%;
  overflow: hidden;
  position: relative;
}

.c1 {
  width: 80%;
  height: 100%;
  background-color: hsla(217,91%,60%,1);
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 300ms;
  transition-duration: 300ms;
}

<body>
    <div>
      <div
        class="c0"
        role="progressbar"
        value="80"
      >
        <div
          class="c1"
          value="80"
        />
      </div>
    </div>
  </body>,
  "container": .c0 {
  font-size: calc(1rem * 1);
  -webkit-animation: 0.8s linear 0s infinite alternate none running dhGBQd;
  animation: 0.8s linear 0s infinite alternate none running dhGBQd;
  height: 0.4em;
  width: 100%;
  overflow: hidden;
  position: relative;
}

.c1 {
  width: 80%;
  height: 100%;
  background-color: hsla(217,91%,60%,1);
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 300ms;
  transition-duration: 300ms;
}

<div>
    <div
      class="c0"
      role="progressbar"
      value="80"
    >
      <div
        class="c1"
        value="80"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Progress Dark mode basic render 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c0 {
  font-size: calc(1rem * 1);
  -webkit-animation: 0.8s linear 0s infinite alternate none running dhGBQd;
  animation: 0.8s linear 0s infinite alternate none running dhGBQd;
  height: 0.4em;
  width: 100%;
  overflow: hidden;
  position: relative;
}

.c1 {
  width: 80%;
  height: 100%;
  background-color: hsla(217,91%,60%,1);
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 300ms;
  transition-duration: 300ms;
}

<body>
    <div>
      <div
        class="c0"
        role="progressbar"
        value="80"
      >
        <div
          class="c1"
          value="80"
        />
      </div>
    </div>
  </body>,
  "container": .c0 {
  font-size: calc(1rem * 1);
  -webkit-animation: 0.8s linear 0s infinite alternate none running dhGBQd;
  animation: 0.8s linear 0s infinite alternate none running dhGBQd;
  height: 0.4em;
  width: 100%;
  overflow: hidden;
  position: relative;
}

.c1 {
  width: 80%;
  height: 100%;
  background-color: hsla(217,91%,60%,1);
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 300ms;
  transition-duration: 300ms;
}

<div>
    <div
      class="c0"
      role="progressbar"
      value="80"
    >
      <div
        class="c1"
        value="80"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Progress Girths 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c0 {
  font-size: calc(1rem * 0.5);
  -webkit-animation: 0.8s linear 0s infinite alternate none running dhGBQd;
  animation: 0.8s linear 0s infinite alternate none running dhGBQd;
  height: 0.4em;
  width: 100%;
  overflow: hidden;
  position: relative;
}

.c4 {
  font-size: calc(1rem * 0.7);
  -webkit-animation: 0.8s linear 0s infinite alternate none running dhGBQd;
  animation: 0.8s linear 0s infinite alternate none running dhGBQd;
  height: 0.4em;
  width: 100%;
  overflow: hidden;
  position: relative;
}

.c5 {
  font-size: calc(1rem * 0.85);
  -webkit-animation: 0.8s linear 0s infinite alternate none running dhGBQd;
  animation: 0.8s linear 0s infinite alternate none running dhGBQd;
  height: 0.4em;
  width: 100%;
  overflow: hidden;
  position: relative;
}

.c6 {
  font-size: calc(1rem * 1);
  -webkit-animation: 0.8s linear 0s infinite alternate none running dhGBQd;
  animation: 0.8s linear 0s infinite alternate none running dhGBQd;
  height: 0.4em;
  width: 100%;
  overflow: hidden;
  position: relative;
}

.c7 {
  font-size: calc(1rem * 1.5);
  -webkit-animation: 0.8s linear 0s infinite alternate none running dhGBQd;
  animation: 0.8s linear 0s infinite alternate none running dhGBQd;
  height: 0.4em;
  width: 100%;
  overflow: hidden;
  position: relative;
}

.c8 {
  font-size: calc(1rem * 2);
  -webkit-animation: 0.8s linear 0s infinite alternate none running dhGBQd;
  animation: 0.8s linear 0s infinite alternate none running dhGBQd;
  height: 0.4em;
  width: 100%;
  overflow: hidden;
  position: relative;
}

.c9 {
  font-size: calc(1rem * 2.5);
  -webkit-animation: 0.8s linear 0s infinite alternate none running dhGBQd;
  animation: 0.8s linear 0s infinite alternate none running dhGBQd;
  height: 0.4em;
  width: 100%;
  overflow: hidden;
  position: relative;
}

.c1 {
  width: 25%;
  height: 100%;
  background-color: hsla(217,91%,60%,1);
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 300ms;
  transition-duration: 300ms;
  background-image: linear-gradient(to right,transparent 0%,hsla(217,91%,60%,1) 50%,transparent 100%);
  position: absolute;
  will-change: left;
  min-width: 50%;
  -webkit-animation: 1s ease 0s infinite normal none running jVduAo;
  animation: 1s ease 0s infinite normal none running jVduAo;
}

.c2 {
  width: 75%;
  height: 100%;
  background-color: hsla(217,91%,60%,1);
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 300ms;
  transition-duration: 300ms;
}

.c3 {
  width: 50%;
  height: 100%;
  background-color: hsla(217,91%,60%,1);
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 300ms;
  transition-duration: 300ms;
  background-image: linear-gradient( 45deg, rgba(0,0,0,0.1) 25%, transparent 25%, transparent 50%, rgba(0,0,0,0.1) 50%, rgba(0,0,0,0.1) 75%, transparent 75%, transparent );
  background-size: 1em 1em;
  -webkit-animation: 1s linear 0s infinite normal none running cFOhoh;
  animation: 1s linear 0s infinite normal none running cFOhoh;
}

<body>
    <div>
      <div>
        <div
          class="c0"
          role="progressbar"
          value="25"
        >
          <div
            class="c1"
            value="25"
          />
        </div>
        <div
          class="c0"
          role="progressbar"
          value="75"
        >
          <div
            class="c2"
            value="75"
          />
        </div>
        <div
          class="c0"
          role="progressbar"
          value="50"
        >
          <div
            class="c3"
            value="50"
          />
        </div>
      </div>
      <div>
        <div
          class="c4"
          role="progressbar"
          value="25"
        >
          <div
            class="c1"
            value="25"
          />
        </div>
        <div
          class="c4"
          role="progressbar"
          value="75"
        >
          <div
            class="c2"
            value="75"
          />
        </div>
        <div
          class="c4"
          role="progressbar"
          value="50"
        >
          <div
            class="c3"
            value="50"
          />
        </div>
      </div>
      <div>
        <div
          class="c5"
          role="progressbar"
          value="25"
        >
          <div
            class="c1"
            value="25"
          />
        </div>
        <div
          class="c5"
          role="progressbar"
          value="75"
        >
          <div
            class="c2"
            value="75"
          />
        </div>
        <div
          class="c5"
          role="progressbar"
          value="50"
        >
          <div
            class="c3"
            value="50"
          />
        </div>
      </div>
      <div>
        <div
          class="c6"
          role="progressbar"
          value="25"
        >
          <div
            class="c1"
            value="25"
          />
        </div>
        <div
          class="c6"
          role="progressbar"
          value="75"
        >
          <div
            class="c2"
            value="75"
          />
        </div>
        <div
          class="c6"
          role="progressbar"
          value="50"
        >
          <div
            class="c3"
            value="50"
          />
        </div>
      </div>
      <div>
        <div
          class="c7"
          role="progressbar"
          value="25"
        >
          <div
            class="c1"
            value="25"
          />
        </div>
        <div
          class="c7"
          role="progressbar"
          value="75"
        >
          <div
            class="c2"
            value="75"
          />
        </div>
        <div
          class="c7"
          role="progressbar"
          value="50"
        >
          <div
            class="c3"
            value="50"
          />
        </div>
      </div>
      <div>
        <div
          class="c8"
          role="progressbar"
          value="25"
        >
          <div
            class="c1"
            value="25"
          />
        </div>
        <div
          class="c8"
          role="progressbar"
          value="75"
        >
          <div
            class="c2"
            value="75"
          />
        </div>
        <div
          class="c8"
          role="progressbar"
          value="50"
        >
          <div
            class="c3"
            value="50"
          />
        </div>
      </div>
      <div>
        <div
          class="c9"
          role="progressbar"
          value="25"
        >
          <div
            class="c1"
            value="25"
          />
        </div>
        <div
          class="c9"
          role="progressbar"
          value="75"
        >
          <div
            class="c2"
            value="75"
          />
        </div>
        <div
          class="c9"
          role="progressbar"
          value="50"
        >
          <div
            class="c3"
            value="50"
          />
        </div>
      </div>
    </div>
  </body>,
  "container": .c0 {
  font-size: calc(1rem * 0.5);
  -webkit-animation: 0.8s linear 0s infinite alternate none running dhGBQd;
  animation: 0.8s linear 0s infinite alternate none running dhGBQd;
  height: 0.4em;
  width: 100%;
  overflow: hidden;
  position: relative;
}

.c4 {
  font-size: calc(1rem * 0.7);
  -webkit-animation: 0.8s linear 0s infinite alternate none running dhGBQd;
  animation: 0.8s linear 0s infinite alternate none running dhGBQd;
  height: 0.4em;
  width: 100%;
  overflow: hidden;
  position: relative;
}

.c5 {
  font-size: calc(1rem * 0.85);
  -webkit-animation: 0.8s linear 0s infinite alternate none running dhGBQd;
  animation: 0.8s linear 0s infinite alternate none running dhGBQd;
  height: 0.4em;
  width: 100%;
  overflow: hidden;
  position: relative;
}

.c6 {
  font-size: calc(1rem * 1);
  -webkit-animation: 0.8s linear 0s infinite alternate none running dhGBQd;
  animation: 0.8s linear 0s infinite alternate none running dhGBQd;
  height: 0.4em;
  width: 100%;
  overflow: hidden;
  position: relative;
}

.c7 {
  font-size: calc(1rem * 1.5);
  -webkit-animation: 0.8s linear 0s infinite alternate none running dhGBQd;
  animation: 0.8s linear 0s infinite alternate none running dhGBQd;
  height: 0.4em;
  width: 100%;
  overflow: hidden;
  position: relative;
}

.c8 {
  font-size: calc(1rem * 2);
  -webkit-animation: 0.8s linear 0s infinite alternate none running dhGBQd;
  animation: 0.8s linear 0s infinite alternate none running dhGBQd;
  height: 0.4em;
  width: 100%;
  overflow: hidden;
  position: relative;
}

.c9 {
  font-size: calc(1rem * 2.5);
  -webkit-animation: 0.8s linear 0s infinite alternate none running dhGBQd;
  animation: 0.8s linear 0s infinite alternate none running dhGBQd;
  height: 0.4em;
  width: 100%;
  overflow: hidden;
  position: relative;
}

.c1 {
  width: 25%;
  height: 100%;
  background-color: hsla(217,91%,60%,1);
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 300ms;
  transition-duration: 300ms;
  background-image: linear-gradient(to right,transparent 0%,hsla(217,91%,60%,1) 50%,transparent 100%);
  position: absolute;
  will-change: left;
  min-width: 50%;
  -webkit-animation: 1s ease 0s infinite normal none running jVduAo;
  animation: 1s ease 0s infinite normal none running jVduAo;
}

.c2 {
  width: 75%;
  height: 100%;
  background-color: hsla(217,91%,60%,1);
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 300ms;
  transition-duration: 300ms;
}

.c3 {
  width: 50%;
  height: 100%;
  background-color: hsla(217,91%,60%,1);
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 300ms;
  transition-duration: 300ms;
  background-image: linear-gradient( 45deg, rgba(0,0,0,0.1) 25%, transparent 25%, transparent 50%, rgba(0,0,0,0.1) 50%, rgba(0,0,0,0.1) 75%, transparent 75%, transparent );
  background-size: 1em 1em;
  -webkit-animation: 1s linear 0s infinite normal none running cFOhoh;
  animation: 1s linear 0s infinite normal none running cFOhoh;
}

<div>
    <div>
      <div
        class="c0"
        role="progressbar"
        value="25"
      >
        <div
          class="c1"
          value="25"
        />
      </div>
      <div
        class="c0"
        role="progressbar"
        value="75"
      >
        <div
          class="c2"
          value="75"
        />
      </div>
      <div
        class="c0"
        role="progressbar"
        value="50"
      >
        <div
          class="c3"
          value="50"
        />
      </div>
    </div>
    <div>
      <div
        class="c4"
        role="progressbar"
        value="25"
      >
        <div
          class="c1"
          value="25"
        />
      </div>
      <div
        class="c4"
        role="progressbar"
        value="75"
      >
        <div
          class="c2"
          value="75"
        />
      </div>
      <div
        class="c4"
        role="progressbar"
        value="50"
      >
        <div
          class="c3"
          value="50"
        />
      </div>
    </div>
    <div>
      <div
        class="c5"
        role="progressbar"
        value="25"
      >
        <div
          class="c1"
          value="25"
        />
      </div>
      <div
        class="c5"
        role="progressbar"
        value="75"
      >
        <div
          class="c2"
          value="75"
        />
      </div>
      <div
        class="c5"
        role="progressbar"
        value="50"
      >
        <div
          class="c3"
          value="50"
        />
      </div>
    </div>
    <div>
      <div
        class="c6"
        role="progressbar"
        value="25"
      >
        <div
          class="c1"
          value="25"
        />
      </div>
      <div
        class="c6"
        role="progressbar"
        value="75"
      >
        <div
          class="c2"
          value="75"
        />
      </div>
      <div
        class="c6"
        role="progressbar"
        value="50"
      >
        <div
          class="c3"
          value="50"
        />
      </div>
    </div>
    <div>
      <div
        class="c7"
        role="progressbar"
        value="25"
      >
        <div
          class="c1"
          value="25"
        />
      </div>
      <div
        class="c7"
        role="progressbar"
        value="75"
      >
        <div
          class="c2"
          value="75"
        />
      </div>
      <div
        class="c7"
        role="progressbar"
        value="50"
      >
        <div
          class="c3"
          value="50"
        />
      </div>
    </div>
    <div>
      <div
        class="c8"
        role="progressbar"
        value="25"
      >
        <div
          class="c1"
          value="25"
        />
      </div>
      <div
        class="c8"
        role="progressbar"
        value="75"
      >
        <div
          class="c2"
          value="75"
        />
      </div>
      <div
        class="c8"
        role="progressbar"
        value="50"
      >
        <div
          class="c3"
          value="50"
        />
      </div>
    </div>
    <div>
      <div
        class="c9"
        role="progressbar"
        value="25"
      >
        <div
          class="c1"
          value="25"
        />
      </div>
      <div
        class="c9"
        role="progressbar"
        value="75"
      >
        <div
          class="c2"
          value="75"
        />
      </div>
      <div
        class="c9"
        role="progressbar"
        value="50"
      >
        <div
          class="c3"
          value="50"
        />
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Progress Tones 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c0 {
  font-size: calc(1rem * 1);
  -webkit-animation: 0.8s linear 0s infinite alternate none running dhGBQd;
  animation: 0.8s linear 0s infinite alternate none running dhGBQd;
  height: 0.4em;
  width: 100%;
  overflow: hidden;
  position: relative;
}

.c1 {
  width: 25%;
  height: 100%;
  background-color: hsla(271,91%,65%,1);
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 300ms;
  transition-duration: 300ms;
  background-image: linear-gradient(to right,transparent 0%,hsla(271,91%,65%,1) 50%,transparent 100%);
  position: absolute;
  will-change: left;
  min-width: 50%;
  -webkit-animation: 1s ease 0s infinite normal none running jVduAo;
  animation: 1s ease 0s infinite normal none running jVduAo;
}

.c2 {
  width: 75%;
  height: 100%;
  background-color: hsla(271,91%,65%,1);
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 300ms;
  transition-duration: 300ms;
}

.c3 {
  width: 50%;
  height: 100%;
  background-color: hsla(271,91%,65%,1);
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 300ms;
  transition-duration: 300ms;
  background-image: linear-gradient( 45deg, rgba(0,0,0,0.1) 25%, transparent 25%, transparent 50%, rgba(0,0,0,0.1) 50%, rgba(0,0,0,0.1) 75%, transparent 75%, transparent );
  background-size: 1em 1em;
  -webkit-animation: 1s linear 0s infinite normal none running cFOhoh;
  animation: 1s linear 0s infinite normal none running cFOhoh;
}

.c4 {
  width: 25%;
  height: 100%;
  background-color: hsla(330,81%,60%,1);
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 300ms;
  transition-duration: 300ms;
  background-image: linear-gradient(to right,transparent 0%,hsla(330,81%,60%,1) 50%,transparent 100%);
  position: absolute;
  will-change: left;
  min-width: 50%;
  -webkit-animation: 1s ease 0s infinite normal none running jVduAo;
  animation: 1s ease 0s infinite normal none running jVduAo;
}

.c5 {
  width: 75%;
  height: 100%;
  background-color: hsla(330,81%,60%,1);
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 300ms;
  transition-duration: 300ms;
}

.c6 {
  width: 50%;
  height: 100%;
  background-color: hsla(330,81%,60%,1);
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 300ms;
  transition-duration: 300ms;
  background-image: linear-gradient( 45deg, rgba(0,0,0,0.1) 25%, transparent 25%, transparent 50%, rgba(0,0,0,0.1) 50%, rgba(0,0,0,0.1) 75%, transparent 75%, transparent );
  background-size: 1em 1em;
  -webkit-animation: 1s linear 0s infinite normal none running cFOhoh;
  animation: 1s linear 0s infinite normal none running cFOhoh;
}

.c7 {
  width: 25%;
  height: 100%;
  background-color: hsla(0,0%,45%,1);
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 300ms;
  transition-duration: 300ms;
  background-image: linear-gradient(to right,transparent 0%,hsla(0,0%,45%,1) 50%,transparent 100%);
  position: absolute;
  will-change: left;
  min-width: 50%;
  -webkit-animation: 1s ease 0s infinite normal none running jVduAo;
  animation: 1s ease 0s infinite normal none running jVduAo;
}

.c8 {
  width: 75%;
  height: 100%;
  background-color: hsla(0,0%,45%,1);
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 300ms;
  transition-duration: 300ms;
}

.c9 {
  width: 50%;
  height: 100%;
  background-color: hsla(0,0%,45%,1);
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 300ms;
  transition-duration: 300ms;
  background-image: linear-gradient( 45deg, rgba(0,0,0,0.1) 25%, transparent 25%, transparent 50%, rgba(0,0,0,0.1) 50%, rgba(0,0,0,0.1) 75%, transparent 75%, transparent );
  background-size: 1em 1em;
  -webkit-animation: 1s linear 0s infinite normal none running cFOhoh;
  animation: 1s linear 0s infinite normal none running cFOhoh;
}

.c10 {
  width: 25%;
  height: 100%;
  background-color: hsla(217,91%,60%,1);
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 300ms;
  transition-duration: 300ms;
  background-image: linear-gradient(to right,transparent 0%,hsla(217,91%,60%,1) 50%,transparent 100%);
  position: absolute;
  will-change: left;
  min-width: 50%;
  -webkit-animation: 1s ease 0s infinite normal none running jVduAo;
  animation: 1s ease 0s infinite normal none running jVduAo;
}

.c11 {
  width: 75%;
  height: 100%;
  background-color: hsla(217,91%,60%,1);
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 300ms;
  transition-duration: 300ms;
}

.c12 {
  width: 50%;
  height: 100%;
  background-color: hsla(217,91%,60%,1);
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 300ms;
  transition-duration: 300ms;
  background-image: linear-gradient( 45deg, rgba(0,0,0,0.1) 25%, transparent 25%, transparent 50%, rgba(0,0,0,0.1) 50%, rgba(0,0,0,0.1) 75%, transparent 75%, transparent );
  background-size: 1em 1em;
  -webkit-animation: 1s linear 0s infinite normal none running cFOhoh;
  animation: 1s linear 0s infinite normal none running cFOhoh;
}

.c13 {
  width: 25%;
  height: 100%;
  background-color: hsla(142,71%,45%,1);
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 300ms;
  transition-duration: 300ms;
  background-image: linear-gradient(to right,transparent 0%,hsla(142,71%,45%,1) 50%,transparent 100%);
  position: absolute;
  will-change: left;
  min-width: 50%;
  -webkit-animation: 1s ease 0s infinite normal none running jVduAo;
  animation: 1s ease 0s infinite normal none running jVduAo;
}

.c14 {
  width: 75%;
  height: 100%;
  background-color: hsla(142,71%,45%,1);
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 300ms;
  transition-duration: 300ms;
}

.c15 {
  width: 50%;
  height: 100%;
  background-color: hsla(142,71%,45%,1);
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 300ms;
  transition-duration: 300ms;
  background-image: linear-gradient( 45deg, rgba(0,0,0,0.1) 25%, transparent 25%, transparent 50%, rgba(0,0,0,0.1) 50%, rgba(0,0,0,0.1) 75%, transparent 75%, transparent );
  background-size: 1em 1em;
  -webkit-animation: 1s linear 0s infinite normal none running cFOhoh;
  animation: 1s linear 0s infinite normal none running cFOhoh;
}

.c16 {
  width: 25%;
  height: 100%;
  background-color: hsla(38,92%,50%,1);
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 300ms;
  transition-duration: 300ms;
  background-image: linear-gradient(to right,transparent 0%,hsla(38,92%,50%,1) 50%,transparent 100%);
  position: absolute;
  will-change: left;
  min-width: 50%;
  -webkit-animation: 1s ease 0s infinite normal none running jVduAo;
  animation: 1s ease 0s infinite normal none running jVduAo;
}

.c17 {
  width: 75%;
  height: 100%;
  background-color: hsla(38,92%,50%,1);
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 300ms;
  transition-duration: 300ms;
}

.c18 {
  width: 50%;
  height: 100%;
  background-color: hsla(38,92%,50%,1);
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 300ms;
  transition-duration: 300ms;
  background-image: linear-gradient( 45deg, rgba(0,0,0,0.1) 25%, transparent 25%, transparent 50%, rgba(0,0,0,0.1) 50%, rgba(0,0,0,0.1) 75%, transparent 75%, transparent );
  background-size: 1em 1em;
  -webkit-animation: 1s linear 0s infinite normal none running cFOhoh;
  animation: 1s linear 0s infinite normal none running cFOhoh;
}

.c19 {
  width: 25%;
  height: 100%;
  background-color: hsla(0,84%,60%,1);
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 300ms;
  transition-duration: 300ms;
  background-image: linear-gradient(to right,transparent 0%,hsla(0,84%,60%,1) 50%,transparent 100%);
  position: absolute;
  will-change: left;
  min-width: 50%;
  -webkit-animation: 1s ease 0s infinite normal none running jVduAo;
  animation: 1s ease 0s infinite normal none running jVduAo;
}

.c20 {
  width: 75%;
  height: 100%;
  background-color: hsla(0,84%,60%,1);
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 300ms;
  transition-duration: 300ms;
}

.c21 {
  width: 50%;
  height: 100%;
  background-color: hsla(0,84%,60%,1);
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 300ms;
  transition-duration: 300ms;
  background-image: linear-gradient( 45deg, rgba(0,0,0,0.1) 25%, transparent 25%, transparent 50%, rgba(0,0,0,0.1) 50%, rgba(0,0,0,0.1) 75%, transparent 75%, transparent );
  background-size: 1em 1em;
  -webkit-animation: 1s linear 0s infinite normal none running cFOhoh;
  animation: 1s linear 0s infinite normal none running cFOhoh;
}

<body>
    <div>
      <div>
        <div
          class="c0"
          role="progressbar"
          value="25"
        >
          <div
            class="c1"
            value="25"
          />
        </div>
        <div
          class="c0"
          role="progressbar"
          value="75"
        >
          <div
            class="c2"
            value="75"
          />
        </div>
        <div
          class="c0"
          role="progressbar"
          value="50"
        >
          <div
            class="c3"
            value="50"
          />
        </div>
      </div>
      <div>
        <div
          class="c0"
          role="progressbar"
          value="25"
        >
          <div
            class="c4"
            value="25"
          />
        </div>
        <div
          class="c0"
          role="progressbar"
          value="75"
        >
          <div
            class="c5"
            value="75"
          />
        </div>
        <div
          class="c0"
          role="progressbar"
          value="50"
        >
          <div
            class="c6"
            value="50"
          />
        </div>
      </div>
      <div>
        <div
          class="c0"
          role="progressbar"
          value="25"
        >
          <div
            class="c7"
            value="25"
          />
        </div>
        <div
          class="c0"
          role="progressbar"
          value="75"
        >
          <div
            class="c8"
            value="75"
          />
        </div>
        <div
          class="c0"
          role="progressbar"
          value="50"
        >
          <div
            class="c9"
            value="50"
          />
        </div>
      </div>
      <div>
        <div
          class="c0"
          role="progressbar"
          value="25"
        >
          <div
            class="c10"
            value="25"
          />
        </div>
        <div
          class="c0"
          role="progressbar"
          value="75"
        >
          <div
            class="c11"
            value="75"
          />
        </div>
        <div
          class="c0"
          role="progressbar"
          value="50"
        >
          <div
            class="c12"
            value="50"
          />
        </div>
      </div>
      <div>
        <div
          class="c0"
          role="progressbar"
          value="25"
        >
          <div
            class="c13"
            value="25"
          />
        </div>
        <div
          class="c0"
          role="progressbar"
          value="75"
        >
          <div
            class="c14"
            value="75"
          />
        </div>
        <div
          class="c0"
          role="progressbar"
          value="50"
        >
          <div
            class="c15"
            value="50"
          />
        </div>
      </div>
      <div>
        <div
          class="c0"
          role="progressbar"
          value="25"
        >
          <div
            class="c16"
            value="25"
          />
        </div>
        <div
          class="c0"
          role="progressbar"
          value="75"
        >
          <div
            class="c17"
            value="75"
          />
        </div>
        <div
          class="c0"
          role="progressbar"
          value="50"
        >
          <div
            class="c18"
            value="50"
          />
        </div>
      </div>
      <div>
        <div
          class="c0"
          role="progressbar"
          value="25"
        >
          <div
            class="c19"
            value="25"
          />
        </div>
        <div
          class="c0"
          role="progressbar"
          value="75"
        >
          <div
            class="c20"
            value="75"
          />
        </div>
        <div
          class="c0"
          role="progressbar"
          value="50"
        >
          <div
            class="c21"
            value="50"
          />
        </div>
      </div>
    </div>
  </body>,
  "container": .c0 {
  font-size: calc(1rem * 1);
  -webkit-animation: 0.8s linear 0s infinite alternate none running dhGBQd;
  animation: 0.8s linear 0s infinite alternate none running dhGBQd;
  height: 0.4em;
  width: 100%;
  overflow: hidden;
  position: relative;
}

.c1 {
  width: 25%;
  height: 100%;
  background-color: hsla(271,91%,65%,1);
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 300ms;
  transition-duration: 300ms;
  background-image: linear-gradient(to right,transparent 0%,hsla(271,91%,65%,1) 50%,transparent 100%);
  position: absolute;
  will-change: left;
  min-width: 50%;
  -webkit-animation: 1s ease 0s infinite normal none running jVduAo;
  animation: 1s ease 0s infinite normal none running jVduAo;
}

.c2 {
  width: 75%;
  height: 100%;
  background-color: hsla(271,91%,65%,1);
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 300ms;
  transition-duration: 300ms;
}

.c3 {
  width: 50%;
  height: 100%;
  background-color: hsla(271,91%,65%,1);
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 300ms;
  transition-duration: 300ms;
  background-image: linear-gradient( 45deg, rgba(0,0,0,0.1) 25%, transparent 25%, transparent 50%, rgba(0,0,0,0.1) 50%, rgba(0,0,0,0.1) 75%, transparent 75%, transparent );
  background-size: 1em 1em;
  -webkit-animation: 1s linear 0s infinite normal none running cFOhoh;
  animation: 1s linear 0s infinite normal none running cFOhoh;
}

.c4 {
  width: 25%;
  height: 100%;
  background-color: hsla(330,81%,60%,1);
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 300ms;
  transition-duration: 300ms;
  background-image: linear-gradient(to right,transparent 0%,hsla(330,81%,60%,1) 50%,transparent 100%);
  position: absolute;
  will-change: left;
  min-width: 50%;
  -webkit-animation: 1s ease 0s infinite normal none running jVduAo;
  animation: 1s ease 0s infinite normal none running jVduAo;
}

.c5 {
  width: 75%;
  height: 100%;
  background-color: hsla(330,81%,60%,1);
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 300ms;
  transition-duration: 300ms;
}

.c6 {
  width: 50%;
  height: 100%;
  background-color: hsla(330,81%,60%,1);
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 300ms;
  transition-duration: 300ms;
  background-image: linear-gradient( 45deg, rgba(0,0,0,0.1) 25%, transparent 25%, transparent 50%, rgba(0,0,0,0.1) 50%, rgba(0,0,0,0.1) 75%, transparent 75%, transparent );
  background-size: 1em 1em;
  -webkit-animation: 1s linear 0s infinite normal none running cFOhoh;
  animation: 1s linear 0s infinite normal none running cFOhoh;
}

.c7 {
  width: 25%;
  height: 100%;
  background-color: hsla(0,0%,45%,1);
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 300ms;
  transition-duration: 300ms;
  background-image: linear-gradient(to right,transparent 0%,hsla(0,0%,45%,1) 50%,transparent 100%);
  position: absolute;
  will-change: left;
  min-width: 50%;
  -webkit-animation: 1s ease 0s infinite normal none running jVduAo;
  animation: 1s ease 0s infinite normal none running jVduAo;
}

.c8 {
  width: 75%;
  height: 100%;
  background-color: hsla(0,0%,45%,1);
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 300ms;
  transition-duration: 300ms;
}

.c9 {
  width: 50%;
  height: 100%;
  background-color: hsla(0,0%,45%,1);
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 300ms;
  transition-duration: 300ms;
  background-image: linear-gradient( 45deg, rgba(0,0,0,0.1) 25%, transparent 25%, transparent 50%, rgba(0,0,0,0.1) 50%, rgba(0,0,0,0.1) 75%, transparent 75%, transparent );
  background-size: 1em 1em;
  -webkit-animation: 1s linear 0s infinite normal none running cFOhoh;
  animation: 1s linear 0s infinite normal none running cFOhoh;
}

.c10 {
  width: 25%;
  height: 100%;
  background-color: hsla(217,91%,60%,1);
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 300ms;
  transition-duration: 300ms;
  background-image: linear-gradient(to right,transparent 0%,hsla(217,91%,60%,1) 50%,transparent 100%);
  position: absolute;
  will-change: left;
  min-width: 50%;
  -webkit-animation: 1s ease 0s infinite normal none running jVduAo;
  animation: 1s ease 0s infinite normal none running jVduAo;
}

.c11 {
  width: 75%;
  height: 100%;
  background-color: hsla(217,91%,60%,1);
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 300ms;
  transition-duration: 300ms;
}

.c12 {
  width: 50%;
  height: 100%;
  background-color: hsla(217,91%,60%,1);
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 300ms;
  transition-duration: 300ms;
  background-image: linear-gradient( 45deg, rgba(0,0,0,0.1) 25%, transparent 25%, transparent 50%, rgba(0,0,0,0.1) 50%, rgba(0,0,0,0.1) 75%, transparent 75%, transparent );
  background-size: 1em 1em;
  -webkit-animation: 1s linear 0s infinite normal none running cFOhoh;
  animation: 1s linear 0s infinite normal none running cFOhoh;
}

.c13 {
  width: 25%;
  height: 100%;
  background-color: hsla(142,71%,45%,1);
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 300ms;
  transition-duration: 300ms;
  background-image: linear-gradient(to right,transparent 0%,hsla(142,71%,45%,1) 50%,transparent 100%);
  position: absolute;
  will-change: left;
  min-width: 50%;
  -webkit-animation: 1s ease 0s infinite normal none running jVduAo;
  animation: 1s ease 0s infinite normal none running jVduAo;
}

.c14 {
  width: 75%;
  height: 100%;
  background-color: hsla(142,71%,45%,1);
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 300ms;
  transition-duration: 300ms;
}

.c15 {
  width: 50%;
  height: 100%;
  background-color: hsla(142,71%,45%,1);
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 300ms;
  transition-duration: 300ms;
  background-image: linear-gradient( 45deg, rgba(0,0,0,0.1) 25%, transparent 25%, transparent 50%, rgba(0,0,0,0.1) 50%, rgba(0,0,0,0.1) 75%, transparent 75%, transparent );
  background-size: 1em 1em;
  -webkit-animation: 1s linear 0s infinite normal none running cFOhoh;
  animation: 1s linear 0s infinite normal none running cFOhoh;
}

.c16 {
  width: 25%;
  height: 100%;
  background-color: hsla(38,92%,50%,1);
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 300ms;
  transition-duration: 300ms;
  background-image: linear-gradient(to right,transparent 0%,hsla(38,92%,50%,1) 50%,transparent 100%);
  position: absolute;
  will-change: left;
  min-width: 50%;
  -webkit-animation: 1s ease 0s infinite normal none running jVduAo;
  animation: 1s ease 0s infinite normal none running jVduAo;
}

.c17 {
  width: 75%;
  height: 100%;
  background-color: hsla(38,92%,50%,1);
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 300ms;
  transition-duration: 300ms;
}

.c18 {
  width: 50%;
  height: 100%;
  background-color: hsla(38,92%,50%,1);
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 300ms;
  transition-duration: 300ms;
  background-image: linear-gradient( 45deg, rgba(0,0,0,0.1) 25%, transparent 25%, transparent 50%, rgba(0,0,0,0.1) 50%, rgba(0,0,0,0.1) 75%, transparent 75%, transparent );
  background-size: 1em 1em;
  -webkit-animation: 1s linear 0s infinite normal none running cFOhoh;
  animation: 1s linear 0s infinite normal none running cFOhoh;
}

.c19 {
  width: 25%;
  height: 100%;
  background-color: hsla(0,84%,60%,1);
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 300ms;
  transition-duration: 300ms;
  background-image: linear-gradient(to right,transparent 0%,hsla(0,84%,60%,1) 50%,transparent 100%);
  position: absolute;
  will-change: left;
  min-width: 50%;
  -webkit-animation: 1s ease 0s infinite normal none running jVduAo;
  animation: 1s ease 0s infinite normal none running jVduAo;
}

.c20 {
  width: 75%;
  height: 100%;
  background-color: hsla(0,84%,60%,1);
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 300ms;
  transition-duration: 300ms;
}

.c21 {
  width: 50%;
  height: 100%;
  background-color: hsla(0,84%,60%,1);
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 300ms;
  transition-duration: 300ms;
  background-image: linear-gradient( 45deg, rgba(0,0,0,0.1) 25%, transparent 25%, transparent 50%, rgba(0,0,0,0.1) 50%, rgba(0,0,0,0.1) 75%, transparent 75%, transparent );
  background-size: 1em 1em;
  -webkit-animation: 1s linear 0s infinite normal none running cFOhoh;
  animation: 1s linear 0s infinite normal none running cFOhoh;
}

<div>
    <div>
      <div
        class="c0"
        role="progressbar"
        value="25"
      >
        <div
          class="c1"
          value="25"
        />
      </div>
      <div
        class="c0"
        role="progressbar"
        value="75"
      >
        <div
          class="c2"
          value="75"
        />
      </div>
      <div
        class="c0"
        role="progressbar"
        value="50"
      >
        <div
          class="c3"
          value="50"
        />
      </div>
    </div>
    <div>
      <div
        class="c0"
        role="progressbar"
        value="25"
      >
        <div
          class="c4"
          value="25"
        />
      </div>
      <div
        class="c0"
        role="progressbar"
        value="75"
      >
        <div
          class="c5"
          value="75"
        />
      </div>
      <div
        class="c0"
        role="progressbar"
        value="50"
      >
        <div
          class="c6"
          value="50"
        />
      </div>
    </div>
    <div>
      <div
        class="c0"
        role="progressbar"
        value="25"
      >
        <div
          class="c7"
          value="25"
        />
      </div>
      <div
        class="c0"
        role="progressbar"
        value="75"
      >
        <div
          class="c8"
          value="75"
        />
      </div>
      <div
        class="c0"
        role="progressbar"
        value="50"
      >
        <div
          class="c9"
          value="50"
        />
      </div>
    </div>
    <div>
      <div
        class="c0"
        role="progressbar"
        value="25"
      >
        <div
          class="c10"
          value="25"
        />
      </div>
      <div
        class="c0"
        role="progressbar"
        value="75"
      >
        <div
          class="c11"
          value="75"
        />
      </div>
      <div
        class="c0"
        role="progressbar"
        value="50"
      >
        <div
          class="c12"
          value="50"
        />
      </div>
    </div>
    <div>
      <div
        class="c0"
        role="progressbar"
        value="25"
      >
        <div
          class="c13"
          value="25"
        />
      </div>
      <div
        class="c0"
        role="progressbar"
        value="75"
      >
        <div
          class="c14"
          value="75"
        />
      </div>
      <div
        class="c0"
        role="progressbar"
        value="50"
      >
        <div
          class="c15"
          value="50"
        />
      </div>
    </div>
    <div>
      <div
        class="c0"
        role="progressbar"
        value="25"
      >
        <div
          class="c16"
          value="25"
        />
      </div>
      <div
        class="c0"
        role="progressbar"
        value="75"
      >
        <div
          class="c17"
          value="75"
        />
      </div>
      <div
        class="c0"
        role="progressbar"
        value="50"
      >
        <div
          class="c18"
          value="50"
        />
      </div>
    </div>
    <div>
      <div
        class="c0"
        role="progressbar"
        value="25"
      >
        <div
          class="c19"
          value="25"
        />
      </div>
      <div
        class="c0"
        role="progressbar"
        value="75"
      >
        <div
          class="c20"
          value="75"
        />
      </div>
      <div
        class="c0"
        role="progressbar"
        value="50"
      >
        <div
          class="c21"
          value="50"
        />
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Progress Variants 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c0 {
  font-size: calc(1rem * 1);
  -webkit-animation: 0.8s linear 0s infinite alternate none running dhGBQd;
  animation: 0.8s linear 0s infinite alternate none running dhGBQd;
  height: 0.4em;
  width: 100%;
  overflow: hidden;
  position: relative;
}

.c1 {
  width: 25%;
  height: 100%;
  background-color: hsla(217,91%,60%,1);
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 300ms;
  transition-duration: 300ms;
  background-image: linear-gradient(to right,transparent 0%,hsla(217,91%,60%,1) 50%,transparent 100%);
  position: absolute;
  will-change: left;
  min-width: 50%;
  -webkit-animation: 1s ease 0s infinite normal none running jVduAo;
  animation: 1s ease 0s infinite normal none running jVduAo;
}

.c2 {
  width: 75%;
  height: 100%;
  background-color: hsla(217,91%,60%,1);
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 300ms;
  transition-duration: 300ms;
}

.c3 {
  width: 50%;
  height: 100%;
  background-color: hsla(217,91%,60%,1);
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 300ms;
  transition-duration: 300ms;
  background-image: linear-gradient( 45deg, rgba(0,0,0,0.1) 25%, transparent 25%, transparent 50%, rgba(0,0,0,0.1) 50%, rgba(0,0,0,0.1) 75%, transparent 75%, transparent );
  background-size: 1em 1em;
  -webkit-animation: 1s linear 0s infinite normal none running cFOhoh;
  animation: 1s linear 0s infinite normal none running cFOhoh;
}

<body>
    <div>
      <div
        class="c0"
        role="progressbar"
        value="25"
      >
        <div
          class="c1"
          value="25"
        />
      </div>
      <div
        class="c0"
        role="progressbar"
        value="75"
      >
        <div
          class="c2"
          value="75"
        />
      </div>
      <div
        class="c0"
        role="progressbar"
        value="50"
      >
        <div
          class="c3"
          value="50"
        />
      </div>
    </div>
  </body>,
  "container": .c0 {
  font-size: calc(1rem * 1);
  -webkit-animation: 0.8s linear 0s infinite alternate none running dhGBQd;
  animation: 0.8s linear 0s infinite alternate none running dhGBQd;
  height: 0.4em;
  width: 100%;
  overflow: hidden;
  position: relative;
}

.c1 {
  width: 25%;
  height: 100%;
  background-color: hsla(217,91%,60%,1);
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 300ms;
  transition-duration: 300ms;
  background-image: linear-gradient(to right,transparent 0%,hsla(217,91%,60%,1) 50%,transparent 100%);
  position: absolute;
  will-change: left;
  min-width: 50%;
  -webkit-animation: 1s ease 0s infinite normal none running jVduAo;
  animation: 1s ease 0s infinite normal none running jVduAo;
}

.c2 {
  width: 75%;
  height: 100%;
  background-color: hsla(217,91%,60%,1);
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 300ms;
  transition-duration: 300ms;
}

.c3 {
  width: 50%;
  height: 100%;
  background-color: hsla(217,91%,60%,1);
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 300ms;
  transition-duration: 300ms;
  background-image: linear-gradient( 45deg, rgba(0,0,0,0.1) 25%, transparent 25%, transparent 50%, rgba(0,0,0,0.1) 50%, rgba(0,0,0,0.1) 75%, transparent 75%, transparent );
  background-size: 1em 1em;
  -webkit-animation: 1s linear 0s infinite normal none running cFOhoh;
  animation: 1s linear 0s infinite normal none running cFOhoh;
}

<div>
    <div
      class="c0"
      role="progressbar"
      value="25"
    >
      <div
        class="c1"
        value="25"
      />
    </div>
    <div
      class="c0"
      role="progressbar"
      value="75"
    >
      <div
        class="c2"
        value="75"
      />
    </div>
    <div
      class="c0"
      role="progressbar"
      value="50"
    >
      <div
        class="c3"
        value="50"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
